# uncertainty-aware-chexpert-diagnosis

./: .gitignore  HIGHLIGHTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PROJECT_CHECKLIST.md  README.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: evaluation.json  results.json
scripts/: evaluate.py  inference.py  predict.py  train.py
src/uncertainty_aware_chexpert_diagnosis/: __init__.py
src/uncertainty_aware_chexpert_diagnosis/evaluation/: __init__.py  metrics.py
src/uncertainty_aware_chexpert_diagnosis/training/: __init__.py  trainer.py
src/uncertainty_aware_chexpert_diagnosis/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
